--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "assert": "^2.0.0",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
+    "pixi.js": "5.3.9",
     "sass": "^1.32.12",
     "sass-loader": "^10",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/assert": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
