--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "@vueup/vue-quill": "^1.0.0-beta.4",
     "assert": "^2.0.0",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
