--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.9.2",
     "@vueup/vue-quill": "^1.0.0-beta.4",
     "assert": "^2.0.0",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
