--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sass": "^1.32.12",
     "sass-loader": "^10",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@types/assert": "^1.5.4",
@@ -35,8 +36,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "~4.1.5",
-    "webpack-env": "^0.8.0"
+    "typescript": "~4.1.5"
   },
   "eslintConfig": {
     "root": true,
