--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "pixi.js": "5.3.9",
+    "rfdc": "^1.3.0",
     "sass": "^1.32.12",
     "sass-loader": "^10",
     "vue": "^3.0.0",
