formatter settings and port 8088

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,13 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
+  "printWidth": 80,
   "tabWidth": 2,
   "overrides": [
     {
       "files": "*.ts",
       "options": {
-        "tabWidth": 2
+        "tabWidth": 4
       }
     }
   ]
