--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8088",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -21,6 +21,7 @@
     "sass-loader": "^10",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-contextmenu": "^0.2.10",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
