--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "@types/socket.io": "2.1.13",
     "@vueup/vue-quill": "^1.0.0-beta.4",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
@@ -19,6 +20,7 @@
     "rfdc": "^1.3.0",
     "sass": "^1.32.12",
     "sass-loader": "^10",
+    "socket.io": "2.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-contextmenu": "^0.2.10",
